--- a/app/views/landing_pages/shared/_navbar.html.erb
+++ b/app/views/landing_pages/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
         <ul class="uk-navbar-nav">
           <li><a href="/" <% if action_name == 'index' %>uk-scroll<% end %>>Accueil</a></li>
           <li><a href="/#concept" <% if action_name == 'index' %>uk-scroll<% end %>>Concept</a></li>
-          <li><a href="/#join-us" <% if action_name == 'index' %>uk-scroll<% end %>>Rejoignez Nous</a></li>
+          <li><a href="/#our-team" <% if action_name == 'index' %>uk-scroll<% end %>>Notre equipe</a></li>
         </ul>
       </div>
       <div class="uk-navbar-center uk-visible@m">
@@ -49,7 +49,7 @@
       <h2 class="uk-modal-title"><%= t('landing.download_app.title')%></h2>
     </div>
       <div class="uk-margin-medium-top uk-text-center">
-          <a class="uk-button uk-button-text" href="https://expo.io/artifacts/e1a0f1d6-eba9-45d9-87ee-fa60721fd419" target="_blank">
+          <a class="uk-button uk-button-text" href="https://play.google.com/store/apps/details?id=com.recipy.recipy" target="_blank"> 
             <h3 class="uk-margin-remove">
             <%= t('landing.download_app.link') %>
             </h3>
