--- a/app/views/landing_pages/shared/_footer.html.erb
+++ b/app/views/landing_pages/shared/_footer.html.erb
@@ -4,12 +4,7 @@
     <div class="uk-flex-middle uk-grid uk-text-center " uk-grid="">
       <div class="uk-width-expand@s uk-first-column">
         <img data-src="<%= asset_path 'landing/logo.png' %>" alt="iphone" height="150" width="150" uk-img>
-        <ul class="uk-list">
-          <li><span uk-icon="icon: home"></span> 5-9 rue du palais Rihour, 59 800 Lille, France</li>
-        </ul>
-      </div>
-      <div class="uk-width-expand@s uk-flex-between ">
-        <p class="uk-text-center">“Ensemble, gaspillons moins. Mangeons mieux.”</p>
+        <p class="uk-text-center">“Cassez votre routine alimentaire”</p>
       </div>
       <div class="uk-width-expand@s uk-flex-between">
         <h1>Accès principaux</h1>
