--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -58,7 +58,7 @@
     <div class="uk-padding">
       <h2 class="landing-title uk-margin uk-text-center">NOTRE EQUIPE</h2>
       <p class="uk-text-large uk-text-center uk-padding uk-text-italic">
-        8 collaborateurs, tous issues de l'Epitech - Promo 2020
+        8 collaborateurs, tous issus de l'Epitech - Promo 2020
       </p>
     </div>
     <div class="uk-width-2-3@m">
