fix: redir after reset password (#357)
Force squash and merge. Le test ne passe pas sur Github alors qu'il a fonctionné sur travis... Je force.

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -6,7 +6,7 @@
       <%= f.input :email, required: true, autofocus: true %>
 
       <div class="uk-margin-medium">
-        <%= f.button :submit, t('.send_me_reset_password_instructions'), class: 'uk-width-1-1' %>
+        <%= f.button :submit, t('devise.reset_password'), class: 'uk-width-1-1' %>
       </div>
     <% end %>
 
