Feat Allergen + Allergen tag for ingredients (#337)
* merge master

* feat: edit pref, allergens

* add utensils to user and link it to preference

* change seed to add allergen

* feat: add in recipe show user alergens

* feat: add in recipe show user alergens

* feat: add in recipe show user alergens

* feat: change design of alert about allergen

* fix: alert design

* fix: alert design

* feat: allergen icon tag on ingredients

* feat: user alergen warning + api + prop ingredient

* fix: quantity type

* fix: wrong translations

* [*] fix front on several views (recipes, notebook, footer..)

* remove modifications on difficulty

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -372,9 +372,43 @@ body {
 
 	.recipe-img-meal-plan {
     height: 100px;
-  
+
     & .title {
       opacity: 1;
     }
   }
+}
+
+.allergen-tag-icon {
+  width: 20px;
+  height: 20px;
+  margin-left: 2px;
+}
+
+.allergen-tag-icon-red {
+  width: 30px;
+  height: 30px;
+  margin-left: 2px;
+}
+
+.allergen-tag-icon-title {
+  width: 30px;
+  height: 30px;
+  margin-left: 2px;
+}
+
+.allergen-alert {
+  left: 10px;
+  color: #666 !important;
+  border: 1px solid #3C3C3C;
+  border-radius: 3px;
+}
+
+.allergen-alert h3 {
+  color: red !important;
+}
+
+.allergen-alert a {
+  color: black !important;
+  opacity: 0.7;
 }
