--- a/app/views/landing_pages/legal_notice.html.erb
+++ b/app/views/landing_pages/legal_notice.html.erb
@@ -15,6 +15,7 @@
     <p>Toute reproduction ou copie des contenus présents sur le site (notamment des recettes) à des fins autres qu'un usage privé n'est possible qu'après autorisation écrite des gestionnaires du site.</p>
     <ul>
       <li>Photos: Unsplash (<a href="https://unsplash.com/">https://unsplash.com/</a>)</li>
+      <li>Icônes des allergènes: Flaticon (faites par <a href="https://www.flaticon.com/authors/freepik">Freepik</a> sur <a href="https://www.flaticon.com/">https://www.flaticon.com/</a>)</li>
     </ul>
 
     <h3>RESPONSABILITÉ QUANT AU CONTENU</h3>
