--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'recipe_form' %>
 
-<%= simple_form_for(Recipe.new, html: {
+<%= simple_form_for(recipe, html: {
   class: "uk-padding recipe_form"
 },) do |f| %>
   <%= f.error_notification %>
