--- a/app/views/notebooks/index.html.erb
+++ b/app/views/notebooks/index.html.erb
@@ -23,9 +23,13 @@
           <div class="uk-card-body">
             <p><%= notebook.description %></p>
           </div>
-          <div class="uk-card-footer align-right">
-            <%= link_to t('notebook.edite'), edit_notebook_path(notebook), class: "uk-button uk-button-text" %>
-            <%= link_to t('notebook.delete'), notebook, method: :delete, class: "uk-button uk-button-text", data: { confirm: t('notebook.confirm_delete') } %>
+          <div class="uk-card-footer uk-flex uk-flex-center">
+            <%= link_to edit_notebook_path(notebook), class: "uk-button" do %>
+              <i uk-tooltip="<%= t('notebook.edite') %>" class="far fa-edit fa-2x"></i>
+            <% end%>
+            <%= link_to  notebook, method: :delete, class: "uk-button", data: { confirm: t('notebook.confirm_delete') } do %>
+              <i uk-tooltip="<%= t('notebook.delete') %>" class="far fa-trash-alt fa-2x"></i>
+            <% end %>
           </div>
         </div>
       </div>
