--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,11 +7,11 @@
     <hr class="uk-divider-icon">
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-      <%= f.input :email, required: true, autofocus: true %>
-      <%= f.input :password, required: true, placeholder: (t('devise.shared.minimum_password_length', count: @minimum_password_length) if @minimum_password_length) %>
-      <%= f.input :first_name, :label => (t('placeholder_first_name')), required: true, autofocus: true %>
-      <%= f.input :last_name, :label => (t('placeholder_last_name')), required: true, autofocus: true %>
-      <%= f.input :newsletters, :label => "S'inscrire à la newsletter ?" ,input_html: { class: 'uk-checkbox uk-margin-left'}, as: 'boolean' %>
+      <%= f.input :email, label: t(".email"), autofocus: true, required: false %>
+      <%= f.input :password, required: false, placeholder: (t('devise.shared.minimum_password_length', count: @minimum_password_length) if @minimum_password_length) %>
+      <%= f.input :first_name, :label => (t('placeholder_first_name')), required: false, autofocus: true %>
+      <%= f.input :last_name, :label => (t('placeholder_last_name')), required: false, autofocus: true %>
+      <%= f.input :newsletters, :label => "S'inscrire à la newsletter ?", input_html: { class: 'uk-checkbox uk-margin-left'}, as: 'boolean' %>
 
       <div class="uk-margin-medium">
         <%= f.button :submit, t('.sign_up'), class: 'uk-width-1-1' %>
